--- a/css/viewer.css
+++ b/css/viewer.css
@@ -119,7 +119,7 @@ select {
   bottom: 34px;
   width: 15%;
   outline: none;
-  cursor: url(images/next.png), pointer;
+  cursor: url(images/next.cur), pointer;
 }
 
 
@@ -1007,6 +1007,14 @@ html[dir="rtl"] .secondaryToolbarButton > span {
   padding-left: 4px;
 }
 
+#firstPage::before {
+  content: url(images/secondaryToolbarButton-firstPage.png);
+}
+
+#lastPage::before {
+  content: url(images/secondaryToolbarButton-lastPage.png);
+}
+
 .secondaryToolbarButton.firstPage::before {
   content: url(images/secondaryToolbarButton-firstPage.png);
 }
@@ -1085,7 +1093,7 @@ html[dir='rtl'] .verticalToolbarSeparator {
   -moz-appearance: textfield; /* hides the spinner in moz */
   min-width: 16px;
   text-align: right;
-  width: 40px;
+  width: 30px;
 }
 
 .toolbarField.pageNumber.visiblePageIsLoading {
